# BINS

./: CMakeLists.txt  README.md  p3_demo.sh
data/: data_test.csv  haberman.data  netlist.spc  resistive_netlist.spc  resistive_netlist_class.spc
data/tests-e2/: ex2.out
data/tests-p2/: ex5.out
data/tests-p3/: p3_demo.sh  rc_charge.gnu  rc_charge.sp
data/tests-p3/rc_charge/: rc_charge_demo.sh
data/tests-p3/rc_discharge/: rc_discharge.gnu  rc_discharge.sp  rc_discharge_demo.sh
data/tests-p3/rl_charge/: rl_charge.sp  rl_charge_demo.sh
data/tests-p3/rl_discharge/: rl_discharge.sp
data/tests2/: ex1.out  ex1.sp  ex2.sp  ex3.out  ex4.out  ex4.sp
include/: Component.h  DynamicComponent.cpp  MatrixManager.h  NodeMap.h  OPSolver.h  Solver.h  SpiceInterpreter.h  SpiceReader.h  interpreter.h  lexer.h  node_map.h  table.h
src/: Component.cpp  DynamicComponent.cpp  MatrixManager.cpp  NodeMap.cpp  OPSolver.cpp  Solver.cpp  SpiceInterpreter.cpp  SpiceReader.cpp  TranSolver.cpp  TranSolver.h  interpreter.c  interpreter.cpp  lexer.c  lexer.cpp  main.c  main.cpp  node_map.cpp  stamp.cpp  stamp.h  table.c  table.cpp
test/: netlist.spc  resistive_netlist_book.spc  resistive_netlist_class.spc
test/tests-p2/: ex3.sp  ex5.sp
test/tests-p3/: p3_demo.sh
test/tests-p3/pwl_source/: pwl_source.gnu  pwl_source.sp  pwl_source_demo.sh
test/tests-p3/rc_charge/: rc_charge.gnu  rc_charge_demo.sh
test/tests-p3/rc_discharge/: rc_discharge.gnu  rc_discharge_demo.sh
test/tests-p3/rl_charge/: rl_charge.gnu  rl_charge_demo.sh
test/tests-p3/rl_discharge/: rl_discharge.gnu  (+1 more)
(+3 files in other folders)
